updated css by Trish
-removed slideshow css
-changed component css

--- a/css/break-room.css
+++ b/css/break-room.css
@@ -1462,3 +1462,6 @@ END ACCORDION CSS
 
 /* Very Large Devices */
 @media (min-width: 1200px) {}
+
+
+/* NOTE TRISH REMOVED SLIDESHOW CSS AND UPDATED COMPONENT CSS */
