--- a/css/break-room.css
+++ b/css/break-room.css
@@ -1721,7 +1721,7 @@ END TODO CSS
 
 /* Larger than tablet */
 @media (min-width: 750px) {
-    Navigation–––––––––––––––––––––––––––––––––––––––––––––––––– */
+    /* Navigation––––––––––––––––––––––––––––––––––––––––––––––––––  */
     .navbar-container {
         max-width: 1250px;
         height: calc(5.5rem + 1rem);
